project (cos_c_sdk_test)

include_directories(${CMAKE_SOURCE_DIR})

set(SAMPLE_SOURCE_FILES cos_demo.c)
set(put_object_demo_src cos_object_demo/put_object_demo.c)
set(get_object_demo_src cos_object_demo/get_object_demo.c)
set(copy_move_object_demo_src cos_object_demo/copy_move_object_demo.c)
set(list_object_demo_src cos_object_demo/list_object_demo.c)
set(delete_object_demo_src cos_object_demo/delete_object_demo.c)
set(get_object_url_demo_src cos_object_demo/get_object_url_demo.c)
set(restore_object_demo_src cos_object_demo/restore_object_demo.c)
set(head_object_demo_src cos_object_demo/head_object_demo.c)
set(delete_bucket_demo_src cos_bucket_demo/delete_bucket_demo.c)
set(get_bucket_list_demo_src cos_bucket_demo/get_bucket_list_demo.c)
set(head_bucket_demo_src cos_bucket_demo/head_bucket_demo.c)
set(put_bucket_demo_src cos_bucket_demo/put_bucket_demo.c)

# find_path(APR_INCLUDE_DIR apr-1/apr_time.h)
# find_path(APR_UTIL_INCLUDE_DIR apr/include/apr-1/apr_md5.h)
# find_path(MINIXML_INCLUDE_DIR mxml.h)
# find_path(CURL_INCLUDE_DIR curl/curl.h)

include_directories (${APR_INCLUDE_DIR})
include_directories (${APR_UTIL_INCLUDE_DIR})
include_directories (${MINIXML_INCLUDE_DIR})
include_directories (${CURL_INCLUDE_DIR})
include_directories ("${CMAKE_SOURCE_DIR}/cos_c_sdk")

find_library(APR_LIBRARY apr-1 PATHS /usr/local/apr/lib/)
find_library(APR_UTIL_LIBRARY aprutil-1 PATHS /usr/local/apr/lib/)
find_library(MINIXML_LIBRARY mxml)
find_library(CURL_LIBRARY curl)

add_executable(cos_c_sdk_test ${SAMPLE_SOURCE_FILES})
add_executable(put_object_demo ${put_object_demo_src})
add_executable(get_object_demo ${get_object_demo_src})
add_executable(copy_move_object_demo ${copy_move_object_demo_src})
add_executable(list_object_demo ${list_object_demo_src})
add_executable(delete_object_demo ${delete_object_demo_src})
add_executable(get_object_url_demo ${get_object_url_demo_src})
add_executable(restore_object_demo ${restore_object_demo_src})
add_executable(head_object_demo ${head_object_demo_src})
add_executable(delete_bucket_demo ${delete_bucket_demo_src})
add_executable(get_bucket_list_demo ${get_bucket_list_demo_src})
add_executable(head_bucket_demo ${head_bucket_demo_src})
add_executable(put_bucket_demo ${put_bucket_demo_src})

target_link_libraries(cos_c_sdk_test cos_c_sdk)
target_link_libraries(cos_c_sdk_test ${APR_UTIL_LIBRARY})
target_link_libraries(cos_c_sdk_test ${APR_LIBRARY})
target_link_libraries(cos_c_sdk_test ${MINIXML_LIBRARY})
target_link_libraries(cos_c_sdk_test ${CURL_LIBRARY})
target_link_libraries(put_object_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
target_link_libraries(get_object_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
target_link_libraries(copy_move_object_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
target_link_libraries(list_object_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
target_link_libraries(delete_object_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
target_link_libraries(get_object_url_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
target_link_libraries(restore_object_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
target_link_libraries(head_object_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
target_link_libraries(delete_bucket_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
target_link_libraries(get_bucket_list_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
target_link_libraries(head_bucket_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
target_link_libraries(put_bucket_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})

